--- a/References.bib
+++ b/References.bib
@@ -202,6 +202,17 @@ year = {1992}
   doi={10.1515/dna-2015-0006}
 }
 
+@article{Jackson2017phrapl,
+  author = {Jackson, Nathan D. and Morales, Ariadna E. and Carstens, Bryan C. and O'Meara, Brian C.},
+  title = {{PHRAPL}: {P}hylogeographic Inference Using Approximate Likelihoods},
+  journal = {Systematic Biology},
+  volume = {66},
+  number = {6},
+  pages = {1045--1053},
+  year = {2017},
+  doi = {10.1093/sysbio/syx001}
+}
+
 @article{jeffreys1946invariant,
   author    = {Jeffreys, H},
   title     = {An Invariant Form for the Prior Probability in Estimation Problems},
@@ -332,6 +343,17 @@ number = {8},
 pages = {857-872},
 doi = {https://doi.org/10.1002/(SICI)1097-0258(19980430)17:8<857::AID-SIM777>3.0.CO;2-E},
 year = {1998}
+}
+
+@article{paradis2004ape,
+  author = {Paradis, E. and Claude, J. and Strimmer, K.},
+  title = {APE: Analyses of Phylogenetics and Evolution in R language},
+  journal = {Bioinformatics},
+  year = {2004},
+  volume = {20},
+  number = {2},
+  pages = {289--290},
+  doi = {10.1093/bioinformatics/btg412}
 }
 
 @article{pentinsaari2016molecular,
