--- a/References.bib
+++ b/References.bib
@@ -334,6 +334,17 @@ year = {2002}
   doi={https://doi.org/10.1371/journal.pbio.0030422}
 }
 
+@article{mutanen2016species,
+  author = {Marko Mutanen and Sami M. Kivelä and Rutger A. Vos and Camiel Doorenweerd and Sujeevan Ratnasingham and Axel Hausmann and Peter Huemer and Vlad Dincă and Erik J. van Nieukerken and Carlos Lopez-Vaamonde and Roger Vila and Leif Aarvik and Thibaud Decaëns and Konstantin A. Efetov and Paul D. N. Hebert and Arild Johnsen and Ole Karsholt and Mikko Pentinsaari and Rodolphe Rougerie and Andreas Segerer and Gerhard Tarmann and Reza Zahiri and H. Charles J. Godfray},
+  title = {Species-Level Para- and Polyphyly in DNA Barcode Gene Trees: Strong Operational Bias in European Lepidoptera},
+  journal = {Systematic Biology},
+  volume = {65},
+  number = {6},
+  pages = {1024--1040},
+  year = {2016},
+  doi = {10.1093/sysbio/syw044}
+}
+
 @article{newcombe1998confidence,
 author = {Newcombe, Robert G.},
 title = {Two-sided confidence intervals for the single proportion: comparison of seven methods},
@@ -407,6 +418,29 @@ address = {New York, NY},
 pages = {375--390},
 doi = {10.1007/978-1-0716-3581-0_24},
 }
+
+@article{puillandre2011abgd,
+  author = {Puillandre, Nicolas and Lambert, Antoine and Brouillet, Stéphane and Achaz, Guillaume},
+  title = {ABGD, Automatic Barcode Gap Discovery for primary species delimitation},
+  journal = {Molecular Ecology},
+  year = {2011},
+  volume = {21},
+  number = {8},
+  pages = {1864--1877},
+  doi = {10.1111/j.1365-294X.2011.05239.x}
+}
+
+@article{puillandre2021asap,
+  author = {Puillandre, Nicolas and Brouillet, Stéphane and Achaz, Guillaume},
+  title = {ASAP: assemble species by automatic partitioning},
+  journal = {Molecular Ecology Resources},
+  year = {2021},
+  volume = {21},
+  number = {2},
+  pages = {609--620},
+  doi = {10.1111/1755-0998.13281}
+}
+
 
  @Manual{rcore2024language,
     title = {R: A Language and Environment for Statistical Computing},
