--- a/References.bib
+++ b/References.bib
@@ -483,6 +483,17 @@ doi = {10.1007/978-1-0716-3581-0_24},
   publisher={Wiley Online Library}
 }
 
+@article{ratnasingham2013bin,
+  author = {Ratnasingham, Sujeevan and Hebert, Paul D. N.},
+  title = {A DNA-Based Registry for All Animal Species: The Barcode Index Number (BIN) System},
+  journal = {PLoS One},
+  volume = {8},
+  number = {7},
+  pages = {e66213},
+  year = {2013},
+  doi = {10.1371/journal.pone.0066213}
+}
+
 @misc{stan2023rstan,
   title = {{RStan}: {T}he {R} interface to {Stan}},
   author = {{Stan Development Team}},
