--- a/References.bib
+++ b/References.bib
@@ -471,6 +471,16 @@ doi = {10.1007/978-1-0716-3581-0_24},
   doi = {10.1093/czoolo/61.5.846}
 }
 
+@article{rannala2017efficient,
+  author = {Rannala, Bruce and Yang, Ziheng},
+  title = {Efficient {B}ayesian Species Tree Inference under the Multispecies Coalescent},
+  journal = {Systematic Biology},
+  volume = {66},
+  number = {5},
+  pages = {823--842},
+  year = {2017},
+  doi = {10.1093/sysbio/syw119}
+}
 
 @article{ratnasingham2007bold,
   title={{BOLD}: {T}he {B}arcode of {L}ife {D}ata {S}ystem (http://www. barcodinglife. org)},
@@ -531,6 +541,17 @@ year = {2021}
   issue = {20},
   pages = {9264-9269},
   doi = {10.1073/pnas.0913022107}
+}
+
+@article{yang2014unguided,
+  author = {Ziheng Yang and Bruce Rannala},
+  title = {Unguided Species Delimitation Using DNA Sequence Data from Multiple Loci},
+  journal = {Molecular Biology and Evolution},
+  volume = {31},
+  number = {12},
+  pages = {3125--3135},
+  year = {2014},
+  doi = {10.1093/molbev/msu279}
 }
 
 @article{yang2017bayesian,
